tests/resources/ingress-smoketest.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ingress-smoketest-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ingress-smoketest-app
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: ingress-smoketest-svc
  labels:
    app: ingress-smoketest-svc
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: ingress-smoketest-app
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-smoketest-app-ing
spec:
  rules:
  - host: ingress-smoketest-app.apps.cloud-platform-live-0.k8s.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: ingress-smoketest-svc
          servicePort: 80
